Del 4 - punkt 6 - filter klar til memberlist

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   border-bottom: 1px solid black;
 }
 
-#tabs table {
+#tabs div {
   padding: 1em;
   background-color: #666;
   grid-area: 2 / 1 / 2 / 3 ;
